# arrow-roguelike

./: .gitignore  LICENSE.md  Makefile  NOTES.md  README.md  arrow.cabal  stack.yaml
app/: Main.hs
data/: asset.json  entity.json
src/: ArrowData.hs  ArrowDataUtil.hs  Camera.hs  DrawUtil.hs  Dungeon.hs  EntityKind.hs  Event.hs  FoV.hs  GameData.hs  TileKind.hs  Util.hs
src/Engine/Arrow/: Compass.hs  Data.hs  Debug.hs  FoV.hs  Save.hs  Util.hs  View.hs
src/Engine/Draw/: Camera.hs  Inventory.hs  Textual.hs  Util.hs  Visual.hs
src/Engine/SDL/: Event.hs  Util.hs
src/Game/: AI.hs  Action.hs  Actor.hs  Arrow.hs  Birth.hs  Combat.hs  Compass.hs  Data.hs  DiceSet.hs  Dungeon.hs  Entity.hs  Equipment.hs  Inventory.hs  Journal.hs  Player.hs  Rules.hs  Tile.hs  Vault.hs
src/Game/Kind/: Asset.hs  Beasts.hs  Cave.hs  Cleric.hs  Dungeon.hs  Entity.hs  Fighter.hs  Mage.hs  Monster.hs  Rogue.hs  Spawn.hs  Tile.hs  Visual.hs
