name:          arrow
version:       0.1.1.0
license:       MIT
synopsis:      Haskell
description:   SDL2 for the Hero '@'
license-file:  LICENSE.md
author:        Joel E Carlson
maintainer:    "Joel E Carlson" <joel.elmer.carlson@gmail.com>
category:      Productivity
cabal-version: >= 1.10
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/joelelmercarlson/arrow

library
  hs-source-dirs:   src
  exposed-modules:  Engine.Arrow.Data
                    , Engine.Arrow.FoV
                    , Engine.Arrow.Util
                    , Engine.Draw.Camera
                    , Engine.Draw.Util
                    , Engine.SDL.Event
                    , Engine.SDL.Util
                    , Game.Data
                    , Game.Dungeon
                    , Game.Kind.Entity
                    , Game.Kind.Tile
  build-depends:    base
                    , containers
                    , MonadRandom
                    , primitive
                    , sdl2
                    , sdl2-image
                    , text
                    , vector
  default-language: Haskell2010

executable Main
  main-is:          Main.hs
  other-modules:    Engine.Arrow.Data
                    , Engine.Arrow.FoV
                    , Engine.Arrow.Util
                    , Engine.Draw.Util
                    , Engine.Draw.Camera
                    , Engine.SDL.Event
                    , Engine.SDL.Util
                    , Game.Data
                    , Game.Dungeon
                    , Game.Kind.Entity
                    , Game.Kind.Tile
  hs-source-dirs:   app
                    , src
  build-depends:    base
                    , extra
                    , containers
                    , MonadRandom
                    , primitive
                    , sdl2
                    , sdl2-image
                    , text
                    , vector
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  default-Language: Haskell2010
