name:          arrow
version:       0.2.0.0
license:       MIT
synopsis:      Haskell
description:   tiny roguelike for the Hero '@'
license-file:  LICENSE.md
author:        Joel E Carlson
maintainer:    "Joel E Carlson" <joel.elmer.carlson@gmail.com>
category:      Productivity
cabal-version: >= 1.10
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/joelelmercarlson/arrow

library
  hs-source-dirs:   src
  exposed-modules:  Engine.Arrow.Compass
                    , Engine.Arrow.Data
                    , Engine.Arrow.FoV
                    , Engine.Arrow.Save
                    , Engine.Arrow.Util
                    , Engine.Arrow.View
                    , Engine.Draw.Camera
                    , Engine.Draw.Textual
                    , Engine.Draw.Util
                    , Engine.Draw.Visual
                    , Engine.SDL.Event
                    , Engine.SDL.Util
                    , Game.AI
                    , Game.Actor
                    , Game.Combat
                    , Game.DiceSet
                    , Game.Dungeon
                    , Game.Inventory
                    , Game.Kind.Entity
                    , Game.Kind.Tile
                    , Game.Tile
  build-depends:    base
                    , aeson
                    , bytestring
                    , containers
                    , directory
                    , MonadRandom
                    , primitive
                    , random
                    , sdl2
                    , sdl2-image
                    , sdl2-ttf
                    , transformers
                    , text
                    , vector
  default-language: Haskell2010

executable Arrow
  main-is:          Main.hs
  other-modules:    Engine.Arrow.Compass
                    , Engine.Arrow.Data
                    , Engine.Arrow.FoV
                    , Engine.Arrow.Save
                    , Engine.Arrow.Util
                    , Engine.Arrow.View
                    , Engine.Draw.Camera
                    , Engine.Draw.Textual
                    , Engine.Draw.Util
                    , Engine.Draw.Visual
                    , Engine.SDL.Event
                    , Engine.SDL.Util
                    , Game.AI
                    , Game.Actor
                    , Game.Combat
                    , Game.DiceSet
                    , Game.Dungeon
                    , Game.Inventory
                    , Game.Kind.Entity
                    , Game.Kind.Tile
                    , Game.Tile
  hs-source-dirs:   app
                    , src
  build-depends:    base
                    , aeson
                    , bytestring
                    , containers
                    , directory
                    , extra
                    , MonadRandom
                    , primitive
                    , random
                    , sdl2
                    , sdl2-image
                    , sdl2-ttf
                    , transformers
                    , text
                    , vector
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  default-Language: Haskell2010
