name:          arrow
version:       0.2.15.0
license:       MIT
synopsis:      Haskell
description:   tiny roguelike for the Hero '@'
license-file:  LICENSE.md
author:        Joel E Carlson
maintainer:    "Joel E Carlson" <joel.elmer.carlson@gmail.com>
category:      Game
cabal-version: >= 1.10
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/joelelmercarlson/arrow

library
  hs-source-dirs:   src
  exposed-modules:  Engine.Arrow.Data
                    , Engine.Arrow.Debug
                    , Engine.Arrow.FoV
                    , Engine.Arrow.Save
                    , Engine.Arrow.View
                    , Engine.Draw.Camera
                    , Engine.Draw.Inventory
                    , Engine.Draw.Textual
                    , Engine.Draw.Util
                    , Engine.Draw.Visual
                    , Engine.SDL.Event
                    , Engine.SDL.Util
                    , Game.Action
                    , Game.AI
                    , Game.Arrow
                    , Game.Birth
                    , Game.Combat
                    , Game.Compass
                    , Game.DiceSet
                    , Game.Entity
                    , Game.Inventory
                    , Game.Journal
                    , Game.Kind.Asset
                    , Game.Kind.Cave
                    , Game.Kind.Dungeon
                    , Game.Kind.Entity
                    , Game.Kind.Monster
                    , Game.Kind.Tile
                    , Game.Kind.Visual
                    , Game.Player
                    , Game.Tile
                    , Game.Vault
  build-depends:    base
                    , aeson
                    , bytestring
                    , containers
                    , directory
                    , MonadRandom
                    , primitive
                    , random
                    , sdl2
                    , sdl2-image
                    , sdl2-ttf
                    , transformers
                    , text
                    , vector
  default-language: Haskell2010

executable Arrow
  main-is:          Main.hs
  other-modules:    Engine.Arrow.Data
                    , Engine.Arrow.Debug
                    , Engine.Arrow.FoV
                    , Engine.Arrow.Save
                    , Engine.Arrow.View
                    , Engine.Draw.Camera
                    , Engine.Draw.Inventory
                    , Engine.Draw.Textual
                    , Engine.Draw.Util
                    , Engine.Draw.Visual
                    , Engine.SDL.Event
                    , Engine.SDL.Util
                    , Game.Action
                    , Game.AI
                    , Game.Arrow
                    , Game.Birth
                    , Game.Combat
                    , Game.Compass
                    , Game.DiceSet
                    , Game.Entity
                    , Game.Inventory
                    , Game.Journal
                    , Game.Kind.Asset
                    , Game.Kind.Cave
                    , Game.Kind.Dungeon
                    , Game.Kind.Entity
                    , Game.Kind.Monster
                    , Game.Kind.Tile
                    , Game.Kind.Visual
                    , Game.Player
                    , Game.Tile
                    , Game.Vault
  hs-source-dirs:   app
                    , src
  build-depends:    base
                    , aeson
                    , bytestring
                    , containers
                    , directory
                    , extra
                    , MonadRandom
                    , primitive
                    , random
                    , sdl2
                    , sdl2-image
                    , sdl2-ttf
                    , transformers
                    , text
                    , vector
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  default-Language: Haskell2010
